# hyperd

./: .gitignore  .travis.yml  Makefile.am  NOTICE  README.md  autogen.sh  configure.ac  format.sh  hyper.go  hyperctl.go  hyperd.go  make_deps.sh  verify-gofmt.sh
Godeps/: Godeps.json
client/: attach.go  build.go  client.go  commit.go  common_options.go  create.go  exec.go  help.go  help_darwin.go  help_linux.go  hijack.go  images.go  info.go  kill.go  list.go  load.go  login.go  logout.go  logs.go  pause.go  pod.go  portmapping.go  pull.go  push.go  replace.go  rm.go  rmi.go  run.go  save.go  start.go  stop.go  unpause.go  utils.go  version.go  vm.go
client/api/: attach.go  build.go  client.go  commit.go  create.go  errors.go  exec.go  hijack.go  images.go  info.go  interface.go  kill.go  list.go  load.go  login.go  logs.go  misc.go  pause.go  portmapping.go  pull.go  push.go  request.go  rm.go  rmi.go  save.go  start.go  stop.go  vm.go
client/api/rpc/: rpclient_demo.go
cmd/: Makefile.am
cmd/hyperctl/: Makefile.am
cmd/hyperd/: Makefile.am  hyperd.go
cmd/vmlogd/: Makefile.am  vmlogd.go
daemon/: attach.go  auth.go  build.go  commit.go  create.go  daemon.go  etchosts.go  exec.go  images.go  info.go  kill.go  list.go  logs.go  pause.go  pod.go  pod.go.orig  pod_test.go  podlist.go  pull.go  push.go  rename.go  rm.go  rmi.go  run.go  server.go  servicediscovery.go  stop.go  storage.go  tty.go  vm.go
daemon/buffer/: buffer.go
daemon/daemonbuilder/: builder.go  pod.go
daemon/daemondb/: daemondb.go  keys.go
daemon/graphdriver/vbox/: driver.go  fsdiff.go  pod.go
daemon/legacy/: README.md  userpod.go  userpod_test.go
daemon/pod/: buffer.go  container.go  decommission.go  etchosts.go  exec.go  factory.go  migration.go  mount.go  networks.go  persist.go  pod.go  pod_test.go  podlist.go  portmappings.go  provision.go  sandbox.go  servicediscovery.go  streams.go  volume.go
docker/: auth.go  build.go  commit.go  container.go  create.go  delete.go  docker.go  images.go  info.go  jsonmessage.go  pull.go  push.go  rmi.go
engine/: README.md  engine.go  env.go  job.go
errors/: errors.go
examples/: Dockerfile  file-mapping.pod  hyperd.pod  insert-file.pod  kubernetes_ubuntu_restart.pod  multi-container.pod  nfs-volume.pod  port-mapping-in-sandbox.pod  port-mapping.pod  ubuntu-with-user.pod  with-volume.pod
hack/: build-protoc-gen-go.sh  build-protoc-gen-gogo.sh  format.sh  install-grpc.sh  test-cmd.sh  update-generated-proto.sh  update-godeps.sh  update-govendor.sh  update-runv.sh  verify-generated-proto.sh  verify-gofmt.sh
hack/lib/: hyperstart.sh  init.sh  logging.sh  test.sh  util.sh  version.sh
hyperdaemon/: attach.go  daemon.go  exec.go  info.go  list.go  pod.go  pull.go  rm.go  stop.go  tty.go  vm.go
hypervisor/: Makefile.am  constants.go  context.go  context_test.go  device_test.go  devicemap.go  drive.go  driver.go  events.go  hypervisor.go  init_comm.go  networks.go  persistence.go  pod.go  qemu_process.go  qemu_process_test.go  qmp_handler.go  qmp_wrapper.go  report.go  tty.go  utils.go  vm_states.go  volume.go
hypervisor/qemu/: constants.go  qemu.go  qemu_process.go  qmp_handler.go  qmp_test.go  qmp_wrapper.go
hypervisor/xen/: Makefile.am  constants.go  hyperxl.c  hyperxl.h  libxl_wrapper.go  xen.go
image/: image.go
image/tarexport/: load.go  save-oci.go  save.go  tarexport.go
integration/: client.go  hyper_test.go
integration/load_test/: busybox.tar
lib/docker/: README.md
lib/docker/api/: common.go
lib/docker/builder/: builder.go  dispatchers.go  evaluator.go  hyperdaemon.go  internals.go  internals_darwin.go  internals_linux.go  job.go  pod.go
lib/docker/daemon/: exec.go  (+29 more)
lib/glog/: glog.go  glog_file.go
lib/goconfig/: README.md
lib/govbox/: README.md  dhcp_test.go  hostonlynet_test.go  machine.go  machine_test.go  natnet_test.go  serial.go  tools.go  util.go  vbm.go  vbm_test.go
lib/portallocator/: portallocator.go  portallocator_darwin.go  portallocator_linux.go
lib/sysinfo/: sysinfo.go  sysinfo_darwin.go  sysinfo_linux.go
lib/telnet/: conn.go
lib/term/: term.go
libmoby/distribution/: fetch_digest.go
mac_installer/: Makefile.am  distribution.xml  product.xml  requirements.plist
mac_installer/resources/: conclusion.html  license.html  welcome.html
mac_installer/scripts/: postinstall  preinstall
network/: network.go  network_test.go
network/ipallocator/: ipallocator.go
network/iptables/: iptables.go
network/portmapper/: portmapper.go
networking/portmapping/: host_portmapping_linux.go  portmapping_interfaces.go  sandbox_portmapping.go  setup_linux.go
package/: README.md
package/centos/: .dockerignore  Dockerfile  centos-rpm.pod.in  make-rpm.sh
package/debian/: make-deb.sh
package/fedora/: .dockerignore  Dockerfile  fedora-rpm.pod.in  make-rpm.sh
package/static/: static.diff
package/ubuntu/: make-deb.sh
pod/: kubernetes.go  pod.go  pod_test.go
qemu/: constants.go  context.go  context_test.go  device_test.go  devicemap.go  drive.go  events.go  init_comm.go  networks.go  persistence.go  pod.go  qemu.go  qemu_process.go  qemu_process_test.go  qmp_handler.go  qmp_wrapper.go  report.go  tty.go  vm_states.go
scripts/: install_kata_image.sh  install_qemu.sh  kata-env-setup.sh  lib.sh  setup_env_ubuntu.sh
server/: middleware.go  server.go  server_unix.go
server/httputils/: httputils.go
server/router/: router.go
serverrpc/: attach.go  container.go  exec.go  images.go  info.go  list.go  login.go  logs.go  pod.go  portmapping.go  server.go  service.go  tty.go  vm.go
servicediscovery/: servicediscovery.go
storage/: defaults.go  files.go  volumes.go
storage/aufs/: aufs.go  aufs_nonsupport.go  aufs_test.go
storage/devicemapper/: dm.go  dm_nonsupport.go  dm_test.go
storage/overlay/: overlay.go  overlay_nonsupport.go  overlay_test.go
storage/vbox/: vbox.go
types/: config.go  container.go  persist.pb.go  persist.proto  pod.go  spec_test.go  types.go  types.pb.go  types.proto  utils.go  validate.go
utils/: daemon.go  names.go  sync.go  utils.go  utils_darwin.go  utils_linux.go
(+316 files in other folders)
